# opencode-autopilot

./: .borg-session.json  .borg_startup_marker  .cli_startup_marker  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  ARCHITECTURE.md  BORG_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD.md  GEMINI.md  GPT.md  HANDOFF.md  HANDOVER.md  IDEAS.md  INTEGRATION_NOTES.md  LICENSE  LLM_INSTRUCTIONS.md  MEMORY.md  PROJECT_MEMORY.md  README.md  ROADMAP.md  SUBMODULE_INVENTORY.md  TODO.md  USAGE.md  VISION.md  audit-2026-03-21.jsonl  chat.json  commit_message.txt  package-lock.json  package.json  package.json.legacy  patch_test.py  split_council.sh  split_history.sh  split_quota.sh  (+6 more)
.autopilot/: autopilot.sqlite-shm  autopilot.sqlite-wal  config.example.json
.borg/agent_memory/: memories.json
.borg/handoffs/: handoff_1774051561324.json  handoff_1774051861337.json  handoff_1774056662718.json  handoff_1774056962724.json  handoff_1774057262737.json  handoff_1774057562741.json  handoff_1774057862744.json  handoff_1774058162749.json  handoff_1774058462750.json  handoff_1774058762753.json  handoff_1774059062759.json  handoff_1774059362762.json
app/: page.tsx
desktop-app/: package.json
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/: demo.js
go-port/: go.mod  go.sum
lib/: council.ts  session-manager.ts  types.ts
memory/: README.md
public/: analytics.html  index.html  settings_modal.html
rag/: README.md
scripts/: test-e2e.ts
src/: council.ts  index.ts  server.ts  session-manager.ts  types.ts
src/council/: index.ts
(+88 files in other folders)
