[package]
name = "borg-orchestrator"
version = "1.0.27"
description = "Multi-model AI council desktop dashboard"
authors = ["Borg Devs"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
